Changes for 1.4.1:

 - fixed bug in processing of host groups permissions (Alexei)
 - minor fix of zabbix_sender command line help (Alexei)
 - fixed pinger to process DNS name instead of host name (Alexei)
 - fixed possible incorrect memory access in nodewatcher (Alexei)
 - fixed processing of cmdline for proc.num and proc.mem (Alexei)
 - fixed processing of {IPADDRESS} for hosts monitored by DNS name (Alexei)
 - fixed 'count' function for trigger expression (Eugene)
 - added availability of using "[&'%" character for key (Eugene)
 - fixed compilation under FreeBSD (Eugene)
 - fixed XML export (Eugene)
 - improved management of timeline period (Eugene)
 - fixed configure with postgreSQL, thanks to "abi" (Eugene)
 - fixed errors for services.php (Artem)

Changes for 1.4:

 - changed IT Services interface (Artem)
 - fixed function diff() for floats (Alexei)
 - improved configuration scripts (Eugene)
 - fixed misc strict compilation issues (Alexei)
 - fixed compilation for solaris (Eugene)
 - some cleanup in update_triggers() (Alexei)
 - fixes related to processing of trigger statuses (Alexei)
 - fixed discovery crashes (Eugene)
 - fixed trigger description substitution for messages (Eugene)
 - fixed SQL schema for housekeeper (Eugene)
 - added delta value calculation for UINT64 (Eugene)
 - fixed log messages for auditlog (Eugene)
 - added ZABBIX Server to a host group (Alexei)
 - fixed default group for Admin/guest. (Alexei)
 - icmpping will be processed regardless of host availability (Alexei)
 - do not update trigger statuses to unknown for trapper items (Alexei)
 - fixed processing of {TRIGGER.VALUE} and {STATUS} (Alexei)
 - fixed displaying of special chars in trigger description (Alexei)
 - restored validation for hostname (Eugene)
 - splitted error message for trigger validation (Eugene)
 - fixed hitory severity (Eugene)
 - fixed user information displayed (Eugene)
 - fixed logfiles monitoring (Eugene)
 - fixed WEB monitoring (Eugene)